<resources>
    <string name="app_name">MB Loader</string>
    <string name="xal_token">ms-xal-0000000048183522</string>
	<string name="default_string">Hello World!</string>
	
	<string name="welcome">Please choose what to launch mc with</string>

	<string name="mbl2_desc">Startup with full support for shader resourcepacks from worlds,realms and servers (might break with mc updates)</string>
	<string name="draco_desc">Startup with support for shader resourcepacks from global resourcepacks tab only (more compatible)</string>

	<string name="launcher_1">Launch with mbl2</string>
	<string name="launcher_2">Launch with draco</string>
	<string name="launcher_3">Launcher</string>

    <string name="mc_pkgid">mc packageid:</string>
    <string name="mc_pkgname">Package name of Minecraft</string>
	<string name="mc_default">com.mojang.minecraftpe</string>

	<string name="log">Launcher logs here:</string>
</resources>
