<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TableLayout
        android:id="@+id/tablelayout"
        android:padding="12dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <Button
            android:id="@+id/launcher_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launcher_1"
            android:gravity="center"
            android:layout_marginBottom="8dp"/>
        <Button
            android:id="@+id/launcher_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launcher_2"
            android:gravity="center"
            android:layout_marginBottom="8dp"/>
        <Button
            android:id="@+id/launcher_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launcher_3"
            android:gravity="center"
            android:layout_marginBottom="8dp"/>
        <EditText
            android:id="@+id/mc_pkgname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/mc_pkgname"
            android:autofillHints="@string/mc_default"
            android:text="@string/mc_default"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="none" 
            android:overScrollMode="never"
            android:fillViewport="true">
            <TextView
                android:id="@+id/listener"
                android:padding="12dp"
                android:fontFamily="monospace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="300"/>
        </ScrollView>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>